// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`default setup 1`] = `
Object {
  "Parameters": Object {
    "BootstrapVersion": Object {
      "Default": "/cdk-bootstrap/hnb659fds/version",
      "Description": "Version of the CDK Bootstrap resources in this environment, automatically retrieved from SSM Parameter Store. [cdk:skip]",
      "Type": "AWS::SSM::Parameter::Value<String>",
    },
  },
  "Resources": Object {
    "ApprovalRuleTemplateRepositoryAssociationCustomResource78A24919": Object {
      "DeletionPolicy": "Delete",
      "Properties": Object {
        "ApprovalRuleTemplateName": "name",
        "RepositoryName": Object {
          "Fn::GetAtt": Array [
            "Repository22E53BBD",
            "Name",
          ],
        },
        "ServiceToken": Object {
          "Fn::GetAtt": Array [
            "CustomApprovalRuleTemplateRepositoryAssociationCustomResourceProviderHandler5B209F6B",
            "Arn",
          ],
        },
      },
      "Type": "Custom::ApprovalRuleTemplateRepositoryAssociation",
      "UpdateReplacePolicy": "Delete",
    },
    "CustomApprovalRuleTemplateRepositoryAssociationCustomResourceProviderHandler5B209F6B": Object {
      "DependsOn": Array [
        "CustomApprovalRuleTemplateRepositoryAssociationCustomResourceProviderRoleD1B94887",
      ],
      "Properties": Object {
        "Code": Object {
          "S3Bucket": Object {
            "Fn::Sub": "cdk-hnb659fds-assets-\${AWS::AccountId}-\${AWS::Region}",
          },
          "S3Key": "f8ca1d29c644a0833008ab90807761903f708f8de014e13f60ab16eff2d0d48c.zip",
        },
        "Handler": "__entrypoint__.handler",
        "MemorySize": 128,
        "Role": Object {
          "Fn::GetAtt": Array [
            "CustomApprovalRuleTemplateRepositoryAssociationCustomResourceProviderRoleD1B94887",
            "Arn",
          ],
        },
        "Runtime": "nodejs14.x",
        "Timeout": 900,
      },
      "Type": "AWS::Lambda::Function",
    },
    "CustomApprovalRuleTemplateRepositoryAssociationCustomResourceProviderRoleD1B94887": Object {
      "Properties": Object {
        "AssumeRolePolicyDocument": Object {
          "Statement": Array [
            Object {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": Object {
                "Service": "lambda.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "ManagedPolicyArns": Array [
          Object {
            "Fn::Sub": "arn:\${AWS::Partition}:iam::aws:policy/service-role/AWSLambdaBasicExecutionRole",
          },
        ],
        "Policies": Array [
          Object {
            "PolicyDocument": Object {
              "Statement": Array [
                Object {
                  "Action": Array [
                    "codecommit:AssociateApprovalRuleTemplateWithRepository",
                    "codecommit:DisassociateApprovalRuleTemplateFromRepository",
                  ],
                  "Effect": "Allow",
                  "Resource": "*",
                },
              ],
              "Version": "2012-10-17",
            },
            "PolicyName": "Inline",
          },
        ],
      },
      "Type": "AWS::IAM::Role",
    },
    "Repository22E53BBD": Object {
      "Properties": Object {
        "RepositoryName": "repo",
      },
      "Type": "AWS::CodeCommit::Repository",
    },
  },
  "Rules": Object {
    "CheckBootstrapVersion": Object {
      "Assertions": Array [
        Object {
          "Assert": Object {
            "Fn::Not": Array [
              Object {
                "Fn::Contains": Array [
                  Array [
                    "1",
                    "2",
                    "3",
                    "4",
                    "5",
                  ],
                  Object {
                    "Ref": "BootstrapVersion",
                  },
                ],
              },
            ],
          },
          "AssertDescription": "CDK bootstrap stack version 6 required. Please run 'cdk bootstrap' with a recent version of the CDK CLI.",
        },
      ],
    },
  },
}
`;

exports[`onOverridden 1`] = `
Object {
  "Parameters": Object {
    "BootstrapVersion": Object {
      "Default": "/cdk-bootstrap/hnb659fds/version",
      "Description": "Version of the CDK Bootstrap resources in this environment, automatically retrieved from SSM Parameter Store. [cdk:skip]",
      "Type": "AWS::SSM::Parameter::Value<String>",
    },
  },
  "Resources": Object {
    "ApprovalRuleTemplateRepositoryAssociationCustomResource78A24919": Object {
      "DeletionPolicy": "Delete",
      "Properties": Object {
        "ApprovalRuleTemplateName": "name",
        "RepositoryName": Object {
          "Fn::GetAtt": Array [
            "Repository22E53BBD",
            "Name",
          ],
        },
        "ServiceToken": Object {
          "Fn::GetAtt": Array [
            "CustomApprovalRuleTemplateRepositoryAssociationCustomResourceProviderHandler5B209F6B",
            "Arn",
          ],
        },
      },
      "Type": "Custom::ApprovalRuleTemplateRepositoryAssociation",
      "UpdateReplacePolicy": "Delete",
    },
    "CustomApprovalRuleTemplateRepositoryAssociationCustomResourceProviderHandler5B209F6B": Object {
      "DependsOn": Array [
        "CustomApprovalRuleTemplateRepositoryAssociationCustomResourceProviderRoleD1B94887",
      ],
      "Properties": Object {
        "Code": Object {
          "S3Bucket": Object {
            "Fn::Sub": "cdk-hnb659fds-assets-\${AWS::AccountId}-\${AWS::Region}",
          },
          "S3Key": "f8ca1d29c644a0833008ab90807761903f708f8de014e13f60ab16eff2d0d48c.zip",
        },
        "Handler": "__entrypoint__.handler",
        "MemorySize": 128,
        "Role": Object {
          "Fn::GetAtt": Array [
            "CustomApprovalRuleTemplateRepositoryAssociationCustomResourceProviderRoleD1B94887",
            "Arn",
          ],
        },
        "Runtime": "nodejs14.x",
        "Timeout": 900,
      },
      "Type": "AWS::Lambda::Function",
    },
    "CustomApprovalRuleTemplateRepositoryAssociationCustomResourceProviderRoleD1B94887": Object {
      "Properties": Object {
        "AssumeRolePolicyDocument": Object {
          "Statement": Array [
            Object {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": Object {
                "Service": "lambda.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "ManagedPolicyArns": Array [
          Object {
            "Fn::Sub": "arn:\${AWS::Partition}:iam::aws:policy/service-role/AWSLambdaBasicExecutionRole",
          },
        ],
        "Policies": Array [
          Object {
            "PolicyDocument": Object {
              "Statement": Array [
                Object {
                  "Action": Array [
                    "codecommit:AssociateApprovalRuleTemplateWithRepository",
                    "codecommit:DisassociateApprovalRuleTemplateFromRepository",
                  ],
                  "Effect": "Allow",
                  "Resource": "*",
                },
              ],
              "Version": "2012-10-17",
            },
            "PolicyName": "Inline",
          },
        ],
      },
      "Type": "AWS::IAM::Role",
    },
    "Repository22E53BBD": Object {
      "Properties": Object {
        "RepositoryName": "repo",
      },
      "Type": "AWS::CodeCommit::Repository",
    },
    "Repositoryoverridden5BAF2C46": Object {
      "Properties": Object {
        "EventPattern": Object {
          "detail": Object {
            "event": Array [
              "pullRequestApprovalRuleOverridden",
            ],
          },
          "detail-type": Array [
            "CodeCommit Pull Request State Change",
          ],
          "resources": Array [
            Object {
              "Fn::GetAtt": Array [
                "Repository22E53BBD",
                "Arn",
              ],
            },
          ],
          "source": Array [
            "aws.codecommit",
          ],
        },
        "State": "ENABLED",
        "Targets": Array [
          Object {
            "Arn": Object {
              "Ref": "TopicBFC7AF6E",
            },
            "Id": "Target0",
          },
        ],
      },
      "Type": "AWS::Events::Rule",
    },
    "TopicBFC7AF6E": Object {
      "Type": "AWS::SNS::Topic",
    },
    "TopicPolicyA1747468": Object {
      "Properties": Object {
        "PolicyDocument": Object {
          "Statement": Array [
            Object {
              "Action": "sns:Publish",
              "Effect": "Allow",
              "Principal": Object {
                "Service": "events.amazonaws.com",
              },
              "Resource": Object {
                "Ref": "TopicBFC7AF6E",
              },
              "Sid": "0",
            },
          ],
          "Version": "2012-10-17",
        },
        "Topics": Array [
          Object {
            "Ref": "TopicBFC7AF6E",
          },
        ],
      },
      "Type": "AWS::SNS::TopicPolicy",
    },
  },
  "Rules": Object {
    "CheckBootstrapVersion": Object {
      "Assertions": Array [
        Object {
          "Assert": Object {
            "Fn::Not": Array [
              Object {
                "Fn::Contains": Array [
                  Array [
                    "1",
                    "2",
                    "3",
                    "4",
                    "5",
                  ],
                  Object {
                    "Ref": "BootstrapVersion",
                  },
                ],
              },
            ],
          },
          "AssertDescription": "CDK bootstrap stack version 6 required. Please run 'cdk bootstrap' with a recent version of the CDK CLI.",
        },
      ],
    },
  },
}
`;
